--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html, body{
-    background-color: #1c315d;
+    background-color: #16274b;
     color: white;
     margin: 0;
     padding: 0;
@@ -10,6 +10,7 @@ h1 {
     font-weight: 500;
     font-style: normal;
     font-size: 4rem;
+    text-align: center;
 }
 
 .main {
@@ -31,7 +32,7 @@ a {
     border-radius: 1rem;
     font-size: 20px;
     transition: 0.5s;
-    border: 1px solid #151341;
+    border: 2px solid #6a688f;
 }
 a:hover {
     background: #fdfdff;
@@ -41,5 +42,63 @@ a:hover {
 }
 .btn {
     color: aliceblue;
-    margin-block: 2rem;
+    margin-block: 1rem;
+}
+
+.letters {
+    font-size: 7rem;
+    font-weight: 900;
+}
+.letters > span {
+    animation: glow 2.5s ease-in-out infinite;
+}
+@keyframes glow {
+    0%,
+    100% {
+    color: #fff;
+    text-shadow: 0 0 12px #39c6d6, 0 0 50px #39c6d6, 0 0 100px #39c6d6;
+    }
+    10%,
+    90% {
+    color: #ffffff;
+    text-shadow: none;
+    }
+}
+.letters > span:nth-child(2) {
+    animation-delay: 0.2s;
+}
+.letters > span:nth-child(3) {
+    animation-delay: 0.4s;
+}
+.letters > span:nth-child(4) {
+    animation-delay: 0.6s;
+}
+.letters > span:nth-child(5) {
+    animation-delay: 0.8s;
+}
+.letters > span:nth-child(6) {
+    animation-delay: 1s;
+}
+.letters > span:nth-child(7) {
+    animation-delay: 1.2s;
+}
+.letters > span:nth-child(8) {
+    animation-delay: 1.4s;
+}
+.letters > span:nth-child(9) {
+    animation-delay: 1.6s;
+}
+.letters > span:nth-child(10) {
+    animation-delay: 1.8s;
+}
+.letters > span:nth-child(11) {
+    animation-delay: 2s;
+}
+@media screen and (max-width: 574px) {
+    .letters {
+    display: block;
+    font-size: 4rem;
+    font-weight: 800;
+    text-align: center;
+    }
 }
