--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@ html, body{
     margin: 0;
     padding: 0;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 0;
+    padding: 0;
+    scrollbar-width: none;
 }
 h1 {
     font-family: 'poppins';
