--- a/style.css
+++ b/style.css
@@ -19,11 +19,20 @@ body {
   z-index: -1;
 }
 
+canvas {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
 h1 {
   font-family: "poppins";
   font-weight: 500;
   font-style: normal;
-  font-size: 3rem;
+  font-size: 4rem;
   text-align: center;
 }
 
@@ -100,6 +109,38 @@ h1 {
   animation-delay: 1.6s;
 }
 
+.moved-letter {
+  position: absolute;
+  pointer-events: none;
+  color: #0f0;
+  font-family: monospace;
+  font-size: 16px;
+  z-index: 2;
+}
+
+.cursor-circle {
+  position: absolute;
+  pointer-events: none;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: #0f0;
+  z-index: 2;
+  opacity: 0.8;
+  transition: transform 0.5s, opacity 0.5s;
+}
+
+.cursor-trail {
+  position: absolute;
+  pointer-events: none;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: #0f0;
+  opacity: 0.8;
+  transition: transform 0.5s, opacity 0.5s;
+}
+
 @media screen and (max-width: 768px) {
   .main {
     padding: 2rem;
@@ -122,7 +163,9 @@ h1 {
 }
 
 .botonera {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .cont {
@@ -154,6 +197,7 @@ h1 {
   height: auto;
   position: relative;
   width: 100%;
+  display: flex;
   justify-content: center;
   margin-bottom: 10px;
   align-items: center;
@@ -166,14 +210,22 @@ h1 {
   padding: 10px;
   text-align: center;
   border-radius: 1rem;
-  font-size: 20px;
+  font-size: 16px;
   transition: 0.5s;
   border: 2px solid #6a688f;
   cursor: pointer;
   background-color: #000000f4;
+  width: 300px; /* Set a fixed width for all buttons */
+  text-align: center; /* Ensure text is centered */
 }
 .button:hover {
   background: #faf7f0;
   color: #1c315d;
   box-shadow: 0px, 10px, 20px, #d2eaff;
+}
+
+header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
